[CRNT-36576] : Increased the width of the legend to avoid wrapping. Bug : CRNT-36576

--- a/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
+++ b/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
@@ -228,7 +228,7 @@ padding : 5px;;
     line-height: 4px;
     margin-bottom: 0px;
     background :white;
-    width:80px;
+    width:90px;
 }
 
 .activity-overview-report-field-label {
